hive-macro/tests/macro/hive/should_fail/module_no_body.rs
#[hive_macro::hive]
pub mod tests;

fn main() {}
